Version 0.4.32, 2016-02-29
--------------
x File::Open(): using now FILE_APPEND_DATA on windows when append mode is requested

Version 0.4.32, 2015-11-02
--------------
x Ztring::From_UTF8() was not handling 4 bytes UTF8 codes correctly

Version 0.4.31, 2015-04-09
--------------
x BigEndian2float16() was buggy
x <new> is possible only with C++

Version 0.4.30, 2014-11-09
--------------
+ New MemoryUtils.h functions for SSE2 memcpy
+ Ztring::From_Unicode(const wchar_t S)
+ Removed Win9X support
+ CMake: scripts improvements, thanks to Ivan Romanov
+ Mac: EOL definitely moved from \r to \n
x int128: was not compiling on Cygwin
x Windows: file open in append mode has shared read/write

Version 0.4.29, 2013-05-13
--------------
+ Ztring: Adding some Date_From_Seconds_* methods
x Ztring: Ztring_NoZero option was not correctly implemented
x File: Write only is not possible with ios_base::out (file is truncated) on Linux
x Dir: Include_Dirs only was not working
x File: accepts Windows "\\?\" magic value
x Thread: Is* methods were not handling all cases

Version 0.4.28, 2012-08-06
--------------
+ Removing _T() in order to be compatible with LLVM compiler
x Ztring: UTF-16 conversion routines crash if the provided string size is odd.
x GNU: forcing stdc++ at link

Version 0.4.27, 2012-05-22
--------------
+ Better support of machines lacking of std::basic_stream
x License text corrections

Version 0.4.26, 2012-04-09
--------------
+ Better support of machines lacking of std::stringstream
+ Better support of machines requesting explicit stdc++ library link option (e.g. some ARM embedded devices)

Version 0.4.25, 2012-03-13
--------------
+ Fast bitstream parser
+ Removing Win9X detection on 64-bit CPU
+ Ztring: integer to text conversion with radix=2
+ Updated Linux compilation scripts

Version 0.4.24, 2012-01-24
--------------
+ Conversion from ctime style date to ISO date
+ GNU: more generic test of size_t as a long (e.g. for s390)